src/Grammar/NCalcParser.ts
// Generated from src/Grammar/NCalc.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import NCalcListener from "./NCalcListener.js";
import NCalcVisitor from "./NCalcVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;



import dayjs from "dayjs";
import { Identifier, BinaryExpression, BinaryExpressionType, NCalcFunction, LogicalExpressionVisitor, UnaryExpression, UnaryExpressionType, TernaryExpression, ValueExpression, ValueType, LogicalExpression } from "@/NCalc/Domain";

export default class NCalcParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly NOT = 29;
	public static readonly TRUE = 30;
	public static readonly FALSE = 31;
	public static readonly AND = 32;
	public static readonly OR = 33;
	public static readonly ID = 34;
	public static readonly FLOAT = 35;
	public static readonly INTEGER = 36;
	public static readonly STRING = 37;
	public static readonly DATETIME = 38;
	public static readonly NAME = 39;
	public static readonly EXPONENT = 40;
	public static readonly WS = 41;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_ncalcExpression = 0;
	public static readonly RULE_logicalExpression = 1;
	public static readonly RULE_conditionalExpression = 2;
	public static readonly RULE_booleanExpression = 3;
	public static readonly RULE_relationalExpression = 4;
	public static readonly RULE_shiftExpression = 5;
	public static readonly RULE_additiveExpression = 6;
	public static readonly RULE_multiplicativeExpression = 7;
	public static readonly RULE_unaryExpression = 8;
	public static readonly RULE_exponentialExpression = 9;
	public static readonly RULE_primaryExpression = 10;
	public static readonly RULE_value = 11;
	public static readonly RULE_identifier = 12;
	public static readonly RULE_expressionList = 13;
	public static readonly RULE_arguments = 14;
	public static readonly literalNames: (string | null)[] = [ null, "'?'", 
                                                            "':'", "'&&'", 
                                                            "'||'", "'&'", 
                                                            "'|'", "'^'", 
                                                            "'=='", "'='", 
                                                            "'!='", "'<>'", 
                                                            "'<'", "'<='", 
                                                            "'>'", "'>='", 
                                                            "'<<'", "'>>'", 
                                                            "'+'", "'-'", 
                                                            "'*'", "'/'", 
                                                            "'%'", "'!'", 
                                                            "'~'", "'**'", 
                                                            "'('", "')'", 
                                                            "','" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "NOT", 
                                                             "TRUE", "FALSE", 
                                                             "AND", "OR", 
                                                             "ID", "FLOAT", 
                                                             "INTEGER", 
                                                             "STRING", "DATETIME", 
                                                             "NAME", "EXPONENT", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"ncalcExpression", "logicalExpression", "conditionalExpression", "booleanExpression", 
		"relationalExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "exponentialExpression", "primaryExpression", "value", 
		"identifier", "expressionList", "arguments",
	];
	public get grammarFileName(): string { return "NCalc.g4"; }
	public get literalNames(): (string | null)[] { return NCalcParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return NCalcParser.symbolicNames; }
	public get ruleNames(): string[] { return NCalcParser.ruleNames; }
	public get serializedATN(): number[] { return NCalcParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}



		public BS = "\\";

		public ExtractString(text) {
			let sb = text.split(/(?!$)/u);
	        let startIndex = 1; // Skip initial quote
	        let slashIndex = -1;

	        const textencoder = new TextEncoder();
	        const decoder = new TextDecoder();

	        while ((slashIndex = sb.join().indexOf(this.BS, startIndex)) != -1)
	        {
	            let escapeType = sb[slashIndex + 1];
	            switch (escapeType)
	            {
	                case 'u':
	                    let hcode = [sb[slashIndex + 4], sb[slashIndex + 5]].join();
	                    let lcode = [sb[slashIndex + 2], sb[slashIndex + 3]].join();

	                    const hBytes = new Uint16Array(hcode.length);
	                    const lBytes = new Uint16Array(lcode.length);

	                    const merged = new Uint16Array(hBytes.length + lBytes.length);
	                    merged.set(hBytes);
	                    merged.set(lBytes, hBytes.length);

	                    const unicodeChar = decoder.decode(merged);

	                    // let unicodeChar = Encoding.Unicode.GetChars(new byte[] { System.Convert.ToByte(hcode, 16), System.Convert.ToByte(lcode, 16) })[0];
	                    sb.splice(slashIndex, 6, unicodeChar);
	                    // sb.Insert(slashIndex, unicodeChar);
	                    break;
	                case 'n': sb.splice(slashIndex, 2, '\n'); break;
	                case 'r': sb.splice(slashIndex, 2, '\r'); break;
	                case 't': sb.splice(slashIndex, 2, '\t'); break;
	                case '\'': sb.splice(slashIndex, 2, '\''); break;
	                case '\\': sb.splice(slashIndex, 2, '\\'); break;
	                default: throw new Error("Unvalid escape sequence: \\" + escapeType);
	            }

	            startIndex = slashIndex + 1;

	        }

	        sb.splice(0, 1);
	        sb.splice(sb.length - 1, 1);

	        return sb.join('');
		}

		public Errors: any[] = [];
		public GetExpression() { return (this.ncalcExpression().val) };


	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, NCalcParser._ATN, NCalcParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public ncalcExpression(): NcalcExpressionContext {
		let localctx: NcalcExpressionContext = new NcalcExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, NCalcParser.RULE_ncalcExpression);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 30;
			localctx._logicalExpression = this.logicalExpression();
			this.state = 31;
			this.match(NCalcParser.EOF);
			localctx.val =  localctx._logicalExpression.val; 
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public logicalExpression(): LogicalExpressionContext {
		let localctx: LogicalExpressionContext = new LogicalExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, NCalcParser.RULE_logicalExpression);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 34;
			localctx._left = this.conditionalExpression();
			 localctx.val =  localctx._left.val; 
			this.state = 66;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				{
				this.state = 39;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===41) {
					{
					{
					this.state = 36;
					this.match(NCalcParser.WS);
					}
					}
					this.state = 41;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 42;
				this.match(NCalcParser.T__0);
				this.state = 46;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 43;
						this.match(NCalcParser.WS);
						}
						}
					}
					this.state = 48;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 1, this._ctx);
				}
				this.state = 49;
				localctx._middle = this.conditionalExpression();
				this.state = 53;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===41) {
					{
					{
					this.state = 50;
					this.match(NCalcParser.WS);
					}
					}
					this.state = 55;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 56;
				this.match(NCalcParser.T__1);
				this.state = 60;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 57;
						this.match(NCalcParser.WS);
						}
						}
					}
					this.state = 62;
					this._errHandler.sync(this);
					_alt = this._interp.adaptivePredict(this._input, 3, this._ctx);
				}
				this.state = 63;
				localctx._right = this.conditionalExpression();
				 localctx.val =  new TernaryExpression(localctx._left.val, localctx._middle.val, localctx._right.val); 
							
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public conditionalExpression(): ConditionalExpressionContext {
		let localctx: ConditionalExpressionContext = new ConditionalExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, NCalcParser.RULE_conditionalExpression);

		let type = BinaryExpressionType.Unknown;

		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 68;
			localctx._left = this.booleanExpression();
			 localctx.val =  localctx._left.val; 
			this.state = 81;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 3)) & ~0x1F) === 0 && ((1 << (_la - 3)) & 1610612739) !== 0)) {
				{
				{
				this.state = 74;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 3:
				case 32:
					{
					this.state = 70;
					_la = this._input.LA(1);
					if(!(_la===3 || _la===32)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					 type = BinaryExpressionType.And; 
					}
					break;
				case 4:
				case 33:
					{
					this.state = 72;
					_la = this._input.LA(1);
					if(!(_la===4 || _la===33)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					 type = BinaryExpressionType.Or; 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 76;
				localctx._right = this.booleanExpression();
				 localctx.val =  new BinaryExpression(type, localctx.val, localctx._right.val); 
				}
				}
				this.state = 83;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public booleanExpression(): BooleanExpressionContext {
		let localctx: BooleanExpressionContext = new BooleanExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, NCalcParser.RULE_booleanExpression);

		let type = BinaryExpressionType.Unknown;

		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			localctx._left = this.relationalExpression();
			 localctx.val =  localctx._left.val; 
			this.state = 99;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 224) !== 0)) {
				{
				{
				this.state = 92;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 5:
					{
					this.state = 86;
					this.match(NCalcParser.T__4);
					 type = BinaryExpressionType.BitwiseAnd; 
					}
					break;
				case 6:
					{
					this.state = 88;
					this.match(NCalcParser.T__5);
					 type = BinaryExpressionType.BitwiseOr; 
					}
					break;
				case 7:
					{
					this.state = 90;
					this.match(NCalcParser.T__6);
					 type = BinaryExpressionType.BitwiseXOr; 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 94;
				localctx._right = this.relationalExpression();
				 localctx.val =  new BinaryExpression(type, localctx.val, localctx._right.val); 
				}
				}
				this.state = 101;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public relationalExpression(): RelationalExpressionContext {
		let localctx: RelationalExpressionContext = new RelationalExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, NCalcParser.RULE_relationalExpression);

		let type = BinaryExpressionType.Unknown;

		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 102;
			localctx._left = this.shiftExpression();
			 localctx.val =  localctx._left.val; 
			this.state = 123;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 65280) !== 0)) {
				{
				{
				this.state = 116;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 8:
				case 9:
					{
					this.state = 104;
					_la = this._input.LA(1);
					if(!(_la===8 || _la===9)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					 type = BinaryExpressionType.Equal; 
					}
					break;
				case 10:
				case 11:
					{
					this.state = 106;
					_la = this._input.LA(1);
					if(!(_la===10 || _la===11)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					 type = BinaryExpressionType.NotEqual; 
					}
					break;
				case 12:
					{
					this.state = 108;
					this.match(NCalcParser.T__11);
					 type = BinaryExpressionType.Lesser; 
					}
					break;
				case 13:
					{
					this.state = 110;
					this.match(NCalcParser.T__12);
					 type = BinaryExpressionType.LesserOrEqual; 
					}
					break;
				case 14:
					{
					this.state = 112;
					this.match(NCalcParser.T__13);
					 type = BinaryExpressionType.Greater; 
					}
					break;
				case 15:
					{
					this.state = 114;
					this.match(NCalcParser.T__14);
					 type = BinaryExpressionType.GreaterOrEqual; 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 118;
				localctx._right = this.shiftExpression();
				 localctx.val =  new BinaryExpression(type, localctx.val, localctx._right.val); 
				}
				}
				this.state = 125;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public shiftExpression(): ShiftExpressionContext {
		let localctx: ShiftExpressionContext = new ShiftExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, NCalcParser.RULE_shiftExpression);

		let type = BinaryExpressionType.Unknown;

		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 126;
			localctx._left = this.additiveExpression();
			 localctx.val =  localctx._left.val; 
			this.state = 139;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===16 || _la===17) {
				{
				{
				this.state = 132;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 16:
					{
					this.state = 128;
					this.match(NCalcParser.T__15);
					 type = BinaryExpressionType.LeftShift; 
					}
					break;
				case 17:
					{
					this.state = 130;
					this.match(NCalcParser.T__16);
					 type = BinaryExpressionType.RightShift; 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 134;
				localctx._right = this.additiveExpression();
				 localctx.val =  new BinaryExpression(type, localctx.val, localctx._right.val); 
				}
				}
				this.state = 141;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public additiveExpression(): AdditiveExpressionContext {
		let localctx: AdditiveExpressionContext = new AdditiveExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, NCalcParser.RULE_additiveExpression);

		let type = BinaryExpressionType.Unknown;

		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 142;
			localctx._left = this.multiplicativeExpression();
			 localctx.val =  localctx._left.val; 
			this.state = 155;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===18 || _la===19) {
				{
				{
				this.state = 148;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 18:
					{
					this.state = 144;
					this.match(NCalcParser.T__17);
					 type = BinaryExpressionType.Plus; 
					}
					break;
				case 19:
					{
					this.state = 146;
					this.match(NCalcParser.T__18);
					 type = BinaryExpressionType.Minus; 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 150;
				localctx._right = this.multiplicativeExpression();
				 localctx.val =  new BinaryExpression(type, localctx.val, localctx._right.val); 
				}
				}
				this.state = 157;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public multiplicativeExpression(): MultiplicativeExpressionContext {
		let localctx: MultiplicativeExpressionContext = new MultiplicativeExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, NCalcParser.RULE_multiplicativeExpression);

		let type = BinaryExpressionType.Unknown;

		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 158;
			localctx._left = this.unaryExpression();
			 localctx.val =  localctx._left.val; 
			this.state = 173;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7340032) !== 0)) {
				{
				{
				this.state = 166;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 20:
					{
					this.state = 160;
					this.match(NCalcParser.T__19);
					 type = BinaryExpressionType.Times; 
					}
					break;
				case 21:
					{
					this.state = 162;
					this.match(NCalcParser.T__20);
					 type = BinaryExpressionType.Div; 
					}
					break;
				case 22:
					{
					this.state = 164;
					this.match(NCalcParser.T__21);
					 type = BinaryExpressionType.Modulo; 
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				this.state = 168;
				localctx._right = this.unaryExpression();
				 localctx.val =  new BinaryExpression(type, localctx.val, localctx._right.val); 
				}
				}
				this.state = 175;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public unaryExpression(): UnaryExpressionContext {
		let localctx: UnaryExpressionContext = new UnaryExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, NCalcParser.RULE_unaryExpression);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 179;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===41) {
				{
				{
				this.state = 176;
				this.match(NCalcParser.WS);
				}
				}
				this.state = 181;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 201;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
